# feerouter-dapp

./: .env.example  .gitignore  DEPLOY_CHECKLIST.md  LEGGIMI_TECHNICAL_OVERVIEW.md  README.md  RECOVERY.md  STRESS_S2_RESULTS.md  STRESS_S3_RESULTS.md  STRESS_S4_RESULTS.md  STRESS_S5_RESULTS.md  STRESS_S6_FULL_PIPELINE.md  STRESS_S7_MEGA_BATCH.md  STRESS_TEST_RESULTS.md  TEST_RESULTS.md  backup-before-refactor.sh  diagnose.mjs  diagnose2.mjs  eslint.config.mjs  global.css  index.html  jest.config.js  middleware.ts  next.config.mjs  package-lock.json  package.json  prompt.md  stress_concurrent_pipeline.py  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
app/: error.tsx  (+36 more)
rpagos-backend/: .dockerignore  .env.bak  .env.example  DEPLOY.md  DEPLOY_CHECKLIST.md  Dockerfile  Dockerfile.worker  README.md  README2.md  alembic.ini  dev.db  dev.db.broken-1776786924  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  qa_test.db  requirements.txt  rpagos_dev.db  stress_s4.db  stress_s6.db  stress_webhook_flood.py  test.db  verify_celery_fix.py
rpagos-backend/alembic/: env.py
rpagos-backend/app/: celery_app.py  config.py  errors.py  logging_config.py  main.py  observability.py
rpagos-backend/docs/: useBackendCallback.ts
rpagos-backend/infrastructure/: kms_policy.json
rpagos-backend/monitoring/: alertmanager_rules.yml  prometheus.yml
rpagos-backend/nginx/: nginx.conf
rpagos-backend/reports/: DAC8_RPagos_2025_20260321_132414.xml  DAC8_RPagos_2025_20260321_132520.xml  DAC8_RPagos_2025_20260321_140447.xml  DAC8_RPagos_2025_20260321_141350.xml  (+51 more)
(+592 files in other folders)
