[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "slow: test that requires real wait time (>5 min)",
]

[project]
name = "rpagos-backend-core"
version = "1.0.0"
description = "Compliance & Data Engine per transazioni Web3 — DAC8/CARF"
requires-python = ">=3.11"
